--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,19 +7,19 @@
   "theme_color": "#c9d1d9",
   "icons": [
     {
-      "src": "favicon-192x192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src": "/favicon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      "src": "favicon-512x512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "/favicon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     },
     {
-      "src": "apple-touch-icon.png",
-      "type": "image/png",
-      "sizes": "180x180"
+      "src": "/apple-touch-icon.png",
+      "sizes": "180x180",
+      "type": "image/png"
     }
   ]
 }
